--- a/src/libs/metro-self/metro-self/src/lib/components/metro-self/metro-self.css
+++ b/src/libs/metro-self/metro-self/src/lib/components/metro-self/metro-self.css
@@ -51,6 +51,7 @@
   color: #2c3e50;
   border-bottom: 1px solid #eee;
   padding-bottom: 8px;
+  text-align: left;
 }
 
 .action-list {
@@ -86,18 +87,30 @@
   color: #2c3e50;
   font-size: 14px;
 
-  .ok-btn {
-    margin-top: 10px;
-    padding: 8px 16px;
-    background-color: #89beff7d;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: 500;
-    display: block;
-    margin-left: 0;
-    margin-right: auto;
-    color: #2c3e50;
+  .main-actions {
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+
+    .action-btn {
+      margin-top: 10px;
+      padding: 8px 16px;
+
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 500;
+      display: block;
+      &.ok-btn {
+        color: #2c3e50;
+        background-color: #89beff7d;
+      }
+      &.cancel-btn {
+        color: #3e5367;
+        border-color: #2c3e50;
+        border: 2px solid #89beff7d;
+      }
+    }
   }
 }
 
@@ -107,6 +120,8 @@
   gap: 10px;
   color: #666;
   font-size: 14px;
+  justify-content: center;
+  margin-top: 50px;
 
   .spinner {
     width: 20px;
@@ -115,6 +130,10 @@
     border-top: 3px solid #1976d2;
     border-radius: 50%;
     animation: spin 1s linear infinite;
+  }
+
+  ::ng-deep .progress .mat-progress-spinner circle {
+    animation-duration: 5s !important; /* default is 1.4s */
   }
 }
 
